# fomosto-qseis

./: .gitignore  .travis.yml  Makefile.am  README  README.md  configure.ac
python/: Makefile.am  qseis.py
src/: Makefile.am  qsam2ve.f  qsbsj.f  qsfftinv.f  qsgetinp.f  qsglobal.h  qslayer.f  qsmain.f  qsmatrix0.f  qsmultis.f  qspsv.f  qsqmodel.f  qssh.f  qssource.f  qsve2am.f  qswaveno.f  qswvint.f  wavelet.f
