bin_PROGRAMS = fomosto_qseis2006a
fomosto_qseis2006a_SOURCES = qsmatrix0.f bessj0.f bessj1.f bessj.f caxcb.f cdgemp.f cmemcpy.f four1.f qsam2ve.f qsbsj.f qsfftinv.f qsgetinp.f qshksh.f qskern.f qslayer.f qsmain.f qsmultis.f qspsv.f qsqmodel.f qssh.f qssource.f qssublay.f qsve2am.f qswavelet.f qswaveno.f qswvint.f taper.f wavelet.f skip_comments.f qsglobal.h 

